cache working in azure + dev works by not using cache when you have the correct .properties files